# alphagenome_encoder_ft

./: README.md  pyproject.toml
configs/: lentimpra_HepG2.json  lentimpra_K562.json  lentimpra_WTC11.json
scripts/: evaluate_mpra.py  run_train_mpra.sh  train_mpra.py
src/alphagenome_encoder_ft/: __init__.py  config.py  constructs.py  data.py  heads.py  model.py  oracle.py  train.py
tests/: test_constructs.py  test_data.py  test_mpra_head.py  test_oracle.py  test_train.py
