[project]
name = "alphagenome-encoder-ft"
version = "0.1.0"
description = "Encoder-only AlphaGenome fine-tuning utilities for lentiMPRA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alphagenome-pytorch",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.uv.sources]
alphagenome-pytorch = { git = "https://github.com/genomicsxai/alphagenome-pytorch" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
