[project]
name = "alphagenome-encoder-ft"
version = "0.1.0"
description = "Encoder-only AlphaGenome fine-tuning utilities for lentiMPRA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alphagenome-pytorch @ git+https://github.com/genomicsxai/alphagenome-pytorch.git",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
train = [
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
